package br.com.piecepilot.backend.entity.component.compatibility;

public enum HddConnection {
    SATA,
    NVMe,
    PCIe4,
    PCIe3,
    SATAIII,
    // Adicione outros tipos conforme necessário
}
