package br.com.piecepilot.backend.entity.component.compatibility;

public enum RamType {
    DDR3,
    DDR4,
    // Adicione outros tipos conforme necessário
}
