package br.com.piecepilot.backend.entity.component.compatibility;

public enum Socket {
    LGA1200,
    AM4,
    // Adicione outros tipos conforme necessário
}
